tests/expectations/compiler/futures/async_before_call_fail.out
Error [ETYC0372102]: External calls must appear before the local final block.
    --> compiler-test:8:9
     |
   8 |         child.aleo/t();
     |         ^^^^^^^^^^^^^^
     |
     = Reorder your code so the external entry point fn call happens before the local final block.
